完璧じゃないけど動いてる

--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #puzzle {
-            width: 400px;
-            height: 400px;
-            border: 1px solid black;
-        }
+
     </style>
 </head>
 
 <body>
-    <div id="puzzle"></div>
+    <div id="app"></div>
     <script src="./src/main.ts" type="module"></script>
 </body>
 
