--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div style="margin: 0 auto; width: 640px; max-width: 100%;">
+        <slitherlink-player
+            src="http://pzv.jp/p.html?slither/24/12/g1706321abi6agalc525363281107061516cp8bi0622062712516220bdi8cgdl727261621022207172726clcg6cic2337073181502272di8bp616071712250151638abldg6bib1116271b"></slitherlink-player>
+    </div>
     <script src="./src/main.ts" type="module"></script>
 </body>
 
