ましゅの追加など

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <div style="margin: 0 auto; width: 640px; max-width: 100%;">
         <slitherlink-player
             src="http://pzv.jp/p.html?slither/24/12/g1706321abi6agalc525363281107061516cp8bi0622062712516220bdi8cgdl727261621022207172726clcg6cic2337073181502272di8bp616071712250151638abldg6bib1116271b"></slitherlink-player>
+        <mashu-player src="http://pzv.jp/p.html?mashu/10/10/1010130093620230901010g0000ij90010"></slitherlink-player>
+
     </div>
-    <script src="./src/main.ts" type="module"></script>
+    <script type="module" src="./src/debug.ts">
+    </script>
 </body>
 
 </html>
