カックロプレーヤーを追加

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <mashu-player src="http://pzv.jp/p.html?mashu/10/10/1010130093620230901010g0000ij90010"></mashu-player>
         <sudoku-player
             src="http://pzv.jp/p.html?sudoku/9/9/g2h7h8g8j3h5h4i2i1h3j2h4g7h3j5h6i6i1h4h5j2g9h1h3g"></sudoku-player>
+        <kakkuro-player
+            src="http://pzv.jp/p.html?kakuro/7/7/.femj0.jPo70m07o60.a3o36m0fo..0am..jhaB3b"></kakkuro-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
