--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             src="http://pzv.jp/p.html?sudoku/9/9/g2h7h8g8j3h5h4i2i1h3j2h4g7h3j5h6i6i1h4h5j2g9h1h3g"></sudoku-player>
         <kakkuro-player
             src="http://pzv.jp/p.html?kakuro/7/7/.femj0.jPo70m07o60.a3o36m0fo..0am..jhaB3b"></kakkuro-player>
+        <nurikabe-player src="http://pzv.jp/p.html?nurikabe/10/10/5g3l4v3p3h2i1zg5k4u4i5h4j"></nurikabe-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
