--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <div style="margin: 0 auto; width: 640px; max-width: 100%;">
-        <slitherlink-player
+        <!-- <slitherlink-player
             src="http://pzv.jp/p.html?slither/8/8/gd33630bg38bcbg2263531cgcah3ch3511cd"></slitherlink-player>
         <mashu-player src="http://pzv.jp/p.html?mashu/10/10/1010130093620230901010g0000ij90010"></mashu-player>
         <sudoku-player
             src="http://pzv.jp/p.html?sudoku/9/9/g2h7h8g8j3h5h4i2i1h3j2h4g7h3j5h6i6i1h4h5j2g9h1h3g"></sudoku-player>
         <kakkuro-player
             src="http://pzv.jp/p.html?kakuro/7/7/.femj0.jPo70m07o60.a3o36m0fo..0am..jhaB3b"></kakkuro-player>
-        <nurikabe-player src="http://pzv.jp/p.html?nurikabe/10/10/5g3l4v3p3h2i1zg5k4u4i5h4j"></nurikabe-player>
-
+        <nurikabe-player src="http://pzv.jp/p.html?nurikabe/10/10/5g3l4v3p3h2i1zg5k4u4i5h4j"></nurikabe-player> -->
+        <fillomino-player src="http://pzv.jp/p.html?fillomino/6/6/3h3h4h2g1h3l2h2g4h1h2h2"></fillomino-player>
     </div>
     <script type="module" src="./src/debug.ts">
     </script>
