モード用日本語ファイルを定義

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <hitokure-player
             src="http://pzv.jp/p.html?hitori/8/8/8416525711438562115234482231644568152732537241163614732345623874"></hitokure-player> -->
         <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player>
+        <shakashaka-player src=""></shakashaka-player>
     </div>
     <script type="module" src="./src/debug.ts">
     </script>
