--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <hitokure-player
             src="http://pzv.jp/p.html?hitori/8/8/8416525711438562115234482231644568152732537241163614732345623874"></hitokure-player> -->
         <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player>
-        <shakashaka-player src=""></shakashaka-player>
+        <shikaku-player src="http://pzv.jp/p.html?shikaku/10/10/kck2l4j4q5g6h6hcr9h6h4g4q4j8l8k6k"></shikaku-player>
     </div>
     <script type="module" src="./src/debug.ts">
     </script>
