スリリン構成変更

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div style="margin: 0 auto; width: 640px; max-width: 100%;">
-        <!-- <slitherlink-player
+        <slitherlink-player
             src="http://pzv.jp/p.html?slither/8/8/gd33630bg38bcbg2263531cgcah3ch3511cd"></slitherlink-player>
-        <mashu-player src="http://pzv.jp/p.html?mashu/10/10/1010130093620230901010g0000ij90010"></mashu-player>
+        <!--<mashu-player src="http://pzv.jp/p.html?mashu/10/10/1010130093620230901010g0000ij90010"></mashu-player>
         <sudoku-player
             src="http://pzv.jp/p.html?sudoku/9/9/g2h7h8g8j3h5h4i2i1h3j2h4g7h3j5h6i6i1h4h5j2g9h1h3g"></sudoku-player>
         <kakkuro-player
@@ -24,8 +24,8 @@
         <hitokure-player
             src="http://pzv.jp/p.html?hitori/8/8/8416525711438562115234482231644568152732537241163614732345623874"></hitokure-player> -->
         <!-- <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player> -->
-        <shikaku-player src="http://pzv.jp/p.html?shikaku/10/10/kck2l4j4q5g6h6hcr9h6h4g4q4j8l8k6k"></shikaku-player>
-        <heyawake-player src="http://pzv.jp/p.html?heyawake/8/8/ail9aa8i492003vg1vo0fs0020i031g3232"></heyawake-player>
+        <!-- <shikaku-player src="http://pzv.jp/p.html?shikaku/10/10/kck2l4j4q5g6h6hcr9h6h4g4q4j8l8k6k"></shikaku-player>
+        <heyawake-player src="http://pzv.jp/p.html?heyawake/8/8/ail9aa8i492003vg1vo0fs0020i031g3232"></heyawake-player> -->
 
     </div>
     <script type="module" src="./src/debug.ts">
