--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <numberlink-player src="https://puzz.link/p?numlin/7/7/1l2j5g3h3k4k52o1m4"></numberlink-player>
 
         <nurikabe-player src="http://pzv.jp/p.html?nurikabe/10/10/5g3l4v3p3h2i1zg5k4u4i5h4j"></nurikabe-player>
-        <!-- <fillomino-player src="http://pzv.jp/p.html?fillomino/6/6/3h3h4h2g1h3l2h2g4h1h2h2"></fillomino-player>
-        <hitokure-player
+        <fillomino-player src="https://puzz.link/p?fillomino/6/6/234h4i1j44g11g43j2i1h332"></fillomino-player>
+        <!-- <hitokure-player
             src="http://pzv.jp/p.html?hitori/8/8/8416525711438562115234482231644568152732537241163614732345623874"></hitokure-player> -->
         <!-- <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player> -->
         <!-- <shikaku-player src="http://pzv.jp/p.html?shikaku/10/10/kck2l4j4q5g6h6hcr9h6h4g4q4j8l8k6k"></shikaku-player>
