シャカシャカ 形式変更

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <fillomino-player src="https://puzz.link/p?fillomino/6/6/234h4i1j44g11g43j2i1h332"></fillomino-player>
         <hitokure-player
             src="http://pzv.jp/p.html?hitori/8/8/8416525711438562115234482231644568152732537241163614732345623874"></hitokure-player>
-        <!-- <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player> -->
+        <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player>
         <shikaku-player src="http://pzv.jp/p.html?shikaku/10/10/kck2l4j4q5g6h6hcr9h6h4g4q4j8l8k6k"></shikaku-player>
         <heyawake-player src="http://pzv.jp/p.html?heyawake/8/8/ail9aa8i492003vg1vo0fs0020i031g3232"></heyawake-player>
 
