--- a/index.html
+++ b/index.html
@@ -12,22 +12,17 @@
 
 <body>
     <div style="margin: 0 auto; width: 640px; max-width: 100%;">
-        <slitherlink-player
-            src="http://pzv.jp/p.html?slither/8/8/gd33630bg38bcbg2263531cgcah3ch3511cd"></slitherlink-player>
-        <mashu-player src="http://pzv.jp/p.html?mashu/10/10/1010130093620230901010g0000ij90010"></mashu-player>
-        <sudoku-player
-            src="http://pzv.jp/p.html?sudoku/9/9/g2h7h8g8j3h5h4i2i1h3j2h4g7h3j5h6i6i1h4h5j2g9h1h3g"></sudoku-player>
-        <kakkuro-player
-            src="http://pzv.jp/p.html?kakuro/7/7/.femj0.jPo70m07o60.a3o36m0fo..0am..jhaB3b"></kakkuro-player>
-        <numberlink-player src="https://puzz.link/p?numlin/7/7/1l2j5g3h3k4k52o1m4"></numberlink-player>
-
-        <nurikabe-player src="http://pzv.jp/p.html?nurikabe/10/10/5g3l4v3p3h2i1zg5k4u4i5h4j"></nurikabe-player>
-        <fillomino-player src="https://puzz.link/p?fillomino/6/6/234h4i1j44g11g43j2i1h332"></fillomino-player>
-        <hitokure-player
-            src="http://pzv.jp/p.html?hitori/8/8/8416525711438562115234482231644568152732537241163614732345623874"></hitokure-player>
+        <slitherlink-player src="http://pzv.jp/p.html?slither/5/5/cbcbcddad"></slitherlink-player>
+        <mashu-player src="http://pzv.jp/p.html?mashu/6/6/1063000i3000"></mashu-player>
+        <sudoku-player src="http://pzv.jp/p.html?sudoku/4/4/g1k23k3g"></sudoku-player>
+        <kakkuro-player src="http://pzv.jp/p.html?kakuro/5/5/48la0.na0lh3l0Bn.0cl.c4a3"></kakkuro-player>
+        <numberlink-player src="https://puzz.link/p?numlin/5/5/1j2h3m1h2j3"></numberlink-player>
+        <nurikabe-player src="http://pzv.jp/p.html?nurikabe/5/5/g5k2o1k3g"></nurikabe-player>
+        <fillomino-player src="https://puzz.link/p?fillomino/6/6/h4j53g2k5233k2g14j3h"></fillomino-player>
+        <hitokure-player src="http://pzv.jp/p.html?hitori/4/4/1114142333214213"></hitokure-player>
         <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player>
-        <shikaku-player src="http://pzv.jp/p.html?shikaku/10/10/kck2l4j4q5g6h6hcr9h6h4g4q4j8l8k6k"></shikaku-player>
-        <heyawake-player src="http://pzv.jp/p.html?heyawake/8/8/ail9aa8i492003vg1vo0fs0020i031g3232"></heyawake-player>
+        <shikaku-player src="http://pzv.jp/p.html?shikaku/6/6/j3g56h6t6h23g5j"></shikaku-player>
+        <heyawake-player src="http://pzv.jp/p.html?heyawake/6/6/lll155007rs12222j"></heyawake-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
