ヤジリンを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -23,6 +23,7 @@
         <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player>
         <shikaku-player src="http://pzv.jp/p.html?shikaku/6/6/j3g56h6t6h23g5j"></shikaku-player>
         <heyawake-player src="http://pzv.jp/p.html?heyawake/6/6/lll155007rs12222j"></heyawake-player>
+        <yajilin-player src="http://pzv.jp/p.html?yajilin/5/5/m32j10"></yajilin-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
