天体ショーを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -34,6 +34,8 @@
         <shikaku-player src="http://pzv.jp/p.html?shikaku/6/6/j3g56h6t6h23g5j"></shikaku-player>
         <heyawake-player src="http://pzv.jp/p.html?heyawake/6/6/lll155007rs12222j"></heyawake-player>
         <yajilin-player src="http://pzv.jp/p.html?yajilin/5/5/m32j10"></yajilin-player>
+        <ripple-player src="http://pzv.jp/p.html?ripple/4/4/9n8rigk14h32k"></ripple-player>
+        <tentaisho-player src="http://pzv.jp/p.html?tentaisho/5/5/67eh94fi65en8dbf"></tentaisho-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
