のりのり追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -36,6 +36,7 @@
         <yajilin-player src="http://pzv.jp/p.html?yajilin/5/5/m32j10"></yajilin-player>
         <ripple-player src="http://pzv.jp/p.html?ripple/4/4/9n8rigk14h32k"></ripple-player>
         <tentaisho-player src="http://pzv.jp/p.html?tentaisho/5/5/67eh94fi65en8dbf"></tentaisho-player>
+        <norinori-player src="http://pzv.jp/p.html?norinori/5/5/cag4ocjo"></norinori-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
