--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -37,6 +37,7 @@
         <ripple-player src="http://pzv.jp/p.html?ripple/4/4/9n8rigk14h32k"></ripple-player>
         <tentaisho-player src="http://pzv.jp/p.html?tentaisho/5/5/67eh94fi65en8dbf"></tentaisho-player>
         <norinori-player src="http://pzv.jp/p.html?norinori/5/5/cag4ocjo"></norinori-player>
+        <lits-player src="http://pzv.jp/p.html?lits/4/4/9q02jg"></lits-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
