美術館追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -38,6 +38,7 @@
         <tentaisho-player src="http://pzv.jp/p.html?tentaisho/5/5/67eh94fi65en8dbf"></tentaisho-player>
         <norinori-player src="http://pzv.jp/p.html?norinori/5/5/cag4ocjo"></norinori-player>
         <lits-player src="http://pzv.jp/p.html?lits/4/4/9q02jg"></lits-player>
+        <akari-player src="http://pzv.jp/p.html?akari/6/6/nekcakbl"></akari-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
