--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -39,6 +39,7 @@
         <norinori-player src="http://pzv.jp/p.html?norinori/5/5/cag4ocjo"></norinori-player>
         <lits-player src="http://pzv.jp/p.html?lits/4/4/9q02jg"></lits-player>
         <akari-player src="http://pzv.jp/p.html?akari/6/6/nekcakbl"></akari-player>
+        <tilepaint-player src="http://pzv.jp/p.html?tilepaint/6/6/mfttf5ovqrrvzv234232243331"></tilepaint-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
