--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -40,6 +40,7 @@
         <lits-player src="http://pzv.jp/p.html?lits/4/4/9q02jg"></lits-player>
         <akari-player src="http://pzv.jp/p.html?akari/6/6/nekcakbl"></akari-player>
         <tilepaint-player src="http://pzv.jp/p.html?tilepaint/6/6/mfttf5ovqrrvzv234232243331"></tilepaint-player>
+        <nurimaze-player src="http://pzv.jp/p.html?nurimaze/6/6/6efjsstsvjun1e374i2547"></nurimaze-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
