スラロームを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -41,6 +41,7 @@
         <akari-player src="http://pzv.jp/p.html?akari/6/6/nekcakbl"></akari-player>
         <tilepaint-player src="http://pzv.jp/p.html?tilepaint/6/6/mfttf5ovqrrvzv234232243331"></tilepaint-player>
         <nurimaze-player src="http://pzv.jp/p.html?nurimaze/6/6/6efjsstsvjun1e374i2547"></nurimaze-player>
+        <slalom-player src="http://pzv.jp/p.html?slalom/d/6/6/9314131314131a1131ag0404j0101/33"></slalom-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
