--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -43,6 +43,7 @@
         <tilepaint-player src="http://pzv.jp/p.html?tilepaint/6/6/mfttf5ovqrrvzv234232243331"></tilepaint-player>
         <nurimaze-player src="http://pzv.jp/p.html?nurimaze/6/6/6efjsstsvjun1e374i2547"></nurimaze-player>
         <slalom-player src="http://pzv.jp/p.html?slalom/d/6/6/9314131314131a1131ag0404j0101/33"></slalom-player>
+        <dbchoco-player src="http://pzv.jp/p.html?dbchoco/6/6/ueoq8p30g42j4n5s22j"></dbchoco-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
