--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -44,6 +44,7 @@
         <nurimaze-player src="http://pzv.jp/p.html?nurimaze/6/6/6efjsstsvjun1e374i2547"></nurimaze-player>
         <slalom-player src="http://pzv.jp/p.html?slalom/d/6/6/9314131314131a1131ag0404j0101/33"></slalom-player>
         <dbchoco-player src="http://pzv.jp/p.html?dbchoco/6/6/ueoq8p30g42j4n5s22j"></dbchoco-player>
+        <pencils-player src="http://pzv.jp/p.html?pencils/5/5/p.3k1ngkh3q"></pencils-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
