ぜんべや、ぬりみさき、クロット追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -46,6 +46,9 @@
         <dbchoco-player src="http://pzv.jp/p.html?dbchoco/6/6/ueoq8p30g42j4n5s22j"></dbchoco-player>
         <pencils-player src="http://pzv.jp/p.html?pencils/5/5/p.3k1ngkh3q"></pencils-player>
         <cbanana-player src="http://pzv.jp/p.html?cbanana/5/5/g13t6h6i1"></cbanana-player>
+        <ayaheya-player src="http://pzv.jp/p.html?ayaheya/6/6/99aa8c0vu0ufk2k"></ayaheya-player>
+        <nurimisaki-player src="http://pzv.jp/p.html?nurimisaki/5/5/4l2l.n.g"></nurimisaki-player>
+        <kurotto-player src="http://pzv.jp/p.html?kurotto/5/5/30m4h6h4m02"></kurotto-player>
 
     </div>
     <script type="module" src="./src/debug.ts">
