--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -39,7 +39,7 @@
         <ayaheya-player src="http://pzv.jp/p.html?ayaheya/6/6/99aa8c0vu0ufk2k"></ayaheya-player>
         <nurimisaki-player src="http://pzv.jp/p.html?nurimisaki/5/5/4l2l.n.g"></nurimisaki-player>
         <kurotto-player src="http://pzv.jp/p.html?kurotto/5/5/30m4h6h4m02"></kurotto-player>
-
+        <simpleloop-player src="http://pzv.jp/p.html?simpleloop/5/5/sg020"></simpleloop-player>
     </div>
     <script type="module" src="./src/main.ts">
     </script>
