--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -40,6 +40,7 @@
         <nurimisaki-player src="http://pzv.jp/p.html?nurimisaki/5/5/4l2l.n.g"></nurimisaki-player>
         <kurotto-player src="http://pzv.jp/p.html?kurotto/5/5/30m4h6h4m02"></kurotto-player>
         <simpleloop-player src="http://pzv.jp/p.html?simpleloop/5/5/sg020"></simpleloop-player>
+        <sashigane-player src="http://pzv.jp/p.html?sashigane/5/5/jm.o3khkgojm4"></sashigane-player>
     </div>
     <script type="module" src="./src/main.ts">
     </script>
