--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -41,6 +41,8 @@
         <kurotto-player src="http://pzv.jp/p.html?kurotto/5/5/30m4h6h4m02"></kurotto-player>
         <simpleloop-player src="http://pzv.jp/p.html?simpleloop/5/5/sg020"></simpleloop-player>
         <sashigane-player src="http://pzv.jp/p.html?sashigane/5/5/jm.o3khkgojm4"></sashigane-player>
+        <tapa-player src="http://pzv.jp/p.html?tapa/5/5/3n5hchhajn2"></tapa-player>
+
     </div>
     <script type="module" src="./src/main.ts">
     </script>
