アイスバーン デモ追加

--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -42,6 +42,7 @@
         <simpleloop-player src="http://pzv.jp/p.html?simpleloop/5/5/sg020"></simpleloop-player>
         <sashigane-player src="http://pzv.jp/p.html?sashigane/5/5/jm.o3khkgojm4"></sashigane-player>
         <tapa-player src="http://pzv.jp/p.html?tapa/5/5/3n5hchhajn2"></tapa-player>
+        <icebarn-player src="http://pzv.jp/p.html?icebarn/8/8/73btfk05ovbjghzpwz9bwm/3/11"></icebarn-player>
 
     </div>
     <script type="module" src="./src/main.ts">
