アイスローム、アイスローム2追加

--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -43,6 +43,8 @@
         <sashigane-player src="http://pzv.jp/p.html?sashigane/5/5/jm.o3khkgojm4"></sashigane-player>
         <tapa-player src="http://pzv.jp/p.html?tapa/5/5/3n5hchhajn2"></tapa-player>
         <icebarn-player src="http://pzv.jp/p.html?icebarn/8/8/73btfk05ovbjghzpwz9bwm/3/11"></icebarn-player>
+        <icelom-player src="http://pzv.jp/p.html?icelom/a/6/6/9e50an10i3zl2g1i/15/4"></icelom-player>
+        <icelom2-player src="http://pzv.jp/p.html?icelom2/6/6/1at0bl80h3p4g5j2g1p6h/0/9"></icelom2-player>
 
     </div>
     <script type="module" src="./src/main.ts">
