--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -46,6 +46,8 @@
         <icelom-player src="http://pzv.jp/p.html?icelom/a/6/6/9e50an10i3zl2g1i/15/4"></icelom-player>
         <icelom2-player src="http://pzv.jp/p.html?icelom2/6/6/1at0bl80h3p4g5j2g1p6h/0/9"></icelom2-player>
         <firefly-player src="http://pzv.jp/p.html?firefly/5/5/40c21a3.a30g10a22a11c11"></firefly-player>
+        <yinyang-player src="http://pzv.jp/p.html?yinyang/5/5/016612300"></yinyang-player>
+
     </div>
     <script type="module" src="./dev/main.ts">
     </script>
