ヘルゴルフ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -47,6 +47,7 @@
         <icelom2-player src="http://pzv.jp/p.html?icelom2/6/6/1at0bl80h3p4g5j2g1p6h/0/9"></icelom2-player>
         <firefly-player src="http://pzv.jp/p.html?firefly/5/5/40c21a3.a30g10a22a11c11"></firefly-player>
         <yinyang-player src="http://pzv.jp/p.html?yinyang/5/5/016612300"></yinyang-player>
+        <herugolf-player src="http://pzv.jp/p.html?herugolf/6/6/1cg00j803ihp2i2ihlhjhhj3l3k"></herugolf-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
