遠い誓い追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -48,6 +48,7 @@
         <firefly-player src="http://pzv.jp/p.html?firefly/5/5/40c21a3.a30g10a22a11c11"></firefly-player>
         <yinyang-player src="http://pzv.jp/p.html?yinyang/5/5/016612300"></yinyang-player>
         <herugolf-player src="http://pzv.jp/p.html?herugolf/6/6/1cg00j803ihp2i2ihlhjhhj3l3k"></herugolf-player>
+        <toichika-player src="http://pzv.jp/p.html?toichika/4/4/n70kt84j"></toichika-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
