バーンズを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -49,6 +49,7 @@
         <yinyang-player src="http://pzv.jp/p.html?yinyang/5/5/016612300"></yinyang-player>
         <herugolf-player src="http://pzv.jp/p.html?herugolf/6/6/1cg00j803ihp2i2ihlhjhhj3l3k"></herugolf-player>
         <toichika-player src="http://pzv.jp/p.html?toichika/4/4/n70kt84j"></toichika-player>
+        <barns-player src="http://pzv.jp/p.html?barns/5/5/06ec080000100"></barns-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
