修学旅行の夜 追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -50,6 +50,7 @@
         <herugolf-player src="http://pzv.jp/p.html?herugolf/6/6/1cg00j803ihp2i2ihlhjhhj3l3k"></herugolf-player>
         <toichika-player src="http://pzv.jp/p.html?toichika/4/4/n70kt84j"></toichika-player>
         <barns-player src="http://pzv.jp/p.html?barns/5/5/06ec080000100"></barns-player>
+        <shugaku-player src="http://pzv.jp/p.html?shugaku/5/5/c5d462b"></shugaku-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
