--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -51,6 +51,7 @@
         <toichika-player src="http://pzv.jp/p.html?toichika/4/4/n70kt84j"></toichika-player>
         <barns-player src="http://pzv.jp/p.html?barns/5/5/06ec080000100"></barns-player>
         <shugaku-player src="http://pzv.jp/p.html?shugaku/5/5/c5d462b"></shugaku-player>
+        <starbattle-player src="http://pzv.jp/p.html?starbattle/6/6/1/4ilbhgdnmhou"></starbattle-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
