--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -52,7 +52,7 @@
         <barns-player src="http://pzv.jp/p.html?barns/5/5/06ec080000100"></barns-player>
         <shugaku-player src="http://pzv.jp/p.html?shugaku/5/5/c5d462b"></shugaku-player>
         <starbattle-player src="http://pzv.jp/p.html?starbattle/6/6/1/4ilbhgdnmhou"></starbattle-player>
-
+        <chocona-player src="http://pzv.jp/p.html?chocona/6/6/8guumlfvo1eq33122g21g32"></chocona-player>
     </div>
     <script type="module" src="./dev/main.ts">
     </script>
