ストストーン追加（エラー出る……）

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -53,6 +53,8 @@
         <shugaku-player src="http://pzv.jp/p.html?shugaku/5/5/c5d462b"></shugaku-player>
         <starbattle-player src="http://pzv.jp/p.html?starbattle/6/6/1/4ilbhgdnmhou"></starbattle-player>
         <chocona-player src="http://pzv.jp/p.html?chocona/6/6/8guumlfvo1eq33122g21g32"></chocona-player>
+        <stostone-player src="http://pzv.jp/p.html?stostone/6/6/433aaqv064p03g433h"></stostone-player>
+
     </div>
     <script type="module" src="./dev/main.ts">
     </script>
