--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -54,6 +54,7 @@
         <starbattle-player src="http://pzv.jp/p.html?starbattle/6/6/1/4ilbhgdnmhou"></starbattle-player>
         <chocona-player src="http://pzv.jp/p.html?chocona/6/6/8guumlfvo1eq33122g21g32"></chocona-player>
         <stostone-player src="http://pzv.jp/p.html?stostone/6/6/433aaqv064p03g433h"></stostone-player>
+        <shimaguni-player src="http://pzv.jp/p.html?shimaguni/6/6/7fe608s0e3uf3g3g2g43"></shimaguni-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
