--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -45,6 +45,17 @@
         <icebarn-player src="http://pzv.jp/p.html?icebarn/8/8/73btfk05ovbjghzpwz9bwm/3/11"></icebarn-player>
         <icelom-player src="http://pzv.jp/p.html?icelom/a/6/6/9e50an10i3zl2g1i/15/4"></icelom-player>
         <icelom2-player src="http://pzv.jp/p.html?icelom2/6/6/1at0bl80h3p4g5j2g1p6h/0/9"></icelom2-player>
+        <firefly-player src="http://pzv.jp/p.html?firefly/5/5/40c21a3.a30g10a22a11c11"></firefly-player>
+        <yinyang-player src="http://pzv.jp/p.html?yinyang/5/5/016612300"></yinyang-player>
+        <herugolf-player src="http://pzv.jp/p.html?herugolf/6/6/1cg00j803ihp2i2ihlhjhhj3l3k"></herugolf-player>
+        <toichika-player src="http://pzv.jp/p.html?toichika/4/4/n70kt84j"></toichika-player>
+        <barns-player src="http://pzv.jp/p.html?barns/5/5/06ec080000100"></barns-player>
+        <shugaku-player src="http://pzv.jp/p.html?shugaku/5/5/c5d462b"></shugaku-player>
+        <starbattle-player src="http://pzv.jp/p.html?starbattle/6/6/1/4ilbhgdnmhou"></starbattle-player>
+        <chocona-player src="http://pzv.jp/p.html?chocona/6/6/8guumlfvo1eq33122g21g32"></chocona-player>
+        <stostone-player src="http://pzv.jp/p.html?stostone/6/6/433aaqv064p03g433h"></stostone-player>
+        <shimaguni-player src="http://pzv.jp/p.html?shimaguni/6/6/7fe608s0e3uf3g3g2g43"></shimaguni-player>
+
 
     </div>
     <script type="module" src="./src/main.ts">
