クリーク・橋をかけろ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -55,6 +55,8 @@
         <chocona-player src="http://pzv.jp/p.html?chocona/6/6/8guumlfvo1eq33122g21g32"></chocona-player>
         <stostone-player src="http://pzv.jp/p.html?stostone/6/6/433aaqv064p03g433h"></stostone-player>
         <shimaguni-player src="http://pzv.jp/p.html?shimaguni/6/6/7fe608s0e3uf3g3g2g43"></shimaguni-player>
+        <creek-player src="http://pzv.jp/p.html?creek/6/6/gagaich2cgb6769dt"></creek-player>
+        <hashikake-player src="http://pzv.jp/p.html?hashikake/5/5/4g2i3h23k3g1g3g4g3"></hashikake-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
