お家へ帰ろう・ぐんたいありを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -57,6 +57,8 @@
         <shimaguni-player src="http://pzv.jp/p.html?shimaguni/6/6/7fe608s0e3uf3g3g2g43"></shimaguni-player>
         <creek-player src="http://pzv.jp/p.html?creek/6/6/gagaich2cgb6769dt"></creek-player>
         <hashikake-player src="http://pzv.jp/p.html?hashikake/5/5/4g2i3h23k3g1g3g4g3"></hashikake-player>
+        <armyants-player src="http://pzv.jp/p.html?armyants/4/4/m38dtgh1g2h43h1g2h"></armyants-player>
+        <kaero-player src="http://pzv.jp/p.html?armyants/3/3/egh0BCBcAaA"></kaero-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
