カントリーロード、温泉めぐり、月か太陽 追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -59,6 +59,9 @@
         <hashikake-player src="http://pzv.jp/p.html?hashikake/5/5/4g2i3h23k3g1g3g4g3"></hashikake-player>
         <armyants-player src="http://pzv.jp/p.html?armyants/4/4/m38dtgh1g2h43h1g2h"></armyants-player>
         <kaero-player src="http://pzv.jp/p.html?armyants/3/3/egh0BCBcAaA"></kaero-player>
+        <onsen-player src="http://pzv.jp/p.html?onsen/6/6/8828887vvsu03v2.w"></onsen-player>
+        <country-player src="http://pzv.jp/p.html?country/5/5/amda0uf02h12h"></country-player>
+        <moonsun-player src="http://pzv.jp/p.html?moonsun/6/6/44ccaa0c0vo0f1767932ii12"></moonsun-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
