--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -62,6 +62,7 @@
         <onsen-player src="http://pzv.jp/p.html?onsen/6/6/8828887vvsu03v2.w"></onsen-player>
         <country-player src="http://pzv.jp/p.html?country/5/5/amda0uf02h12h"></country-player>
         <moonsun-player src="http://pzv.jp/p.html?moonsun/6/6/44ccaa0c0vo0f1767932ii12"></moonsun-player>
+        <reflect-player src="http://pzv.jp/p.html?reflect/5/5/49l20c5f24"></reflect-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
