へびいちご追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -63,6 +63,7 @@
         <country-player src="http://pzv.jp/p.html?country/5/5/amda0uf02h12h"></country-player>
         <moonsun-player src="http://pzv.jp/p.html?moonsun/6/6/44ccaa0c0vo0f1767932ii12"></moonsun-player>
         <reflect-player src="http://pzv.jp/p.html?reflect/5/5/49l20c5f24"></reflect-player>
+        <hebi-player src="http://pzv.jp/p.html?hebi/5/5/a21g23b20b45g41a"></hebi-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
