なげなわ・リングリング追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -64,6 +64,8 @@
         <moonsun-player src="http://pzv.jp/p.html?moonsun/6/6/44ccaa0c0vo0f1767932ii12"></moonsun-player>
         <reflect-player src="http://pzv.jp/p.html?reflect/5/5/49l20c5f24"></reflect-player>
         <hebi-player src="http://pzv.jp/p.html?hebi/5/5/a21g23b20b45g41a"></hebi-player>
+        <nagenawa-player src="http://pzv.jp/p.html?nagenawa/6/6/alrrlafbaaqu3011314g223h"></nagenawa-player>
+        <ringring-player src="http://pzv.jp/p.html?ringring/5/5/02084"></ringring-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
