--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -66,7 +66,7 @@
         <hebi-player src="http://pzv.jp/p.html?hebi/5/5/a21g23b20b45g41a"></hebi-player>
         <nagenawa-player src="http://pzv.jp/p.html?nagenawa/6/6/alrrlafbaaqu3011314g223h"></nagenawa-player>
         <ringring-player src="http://pzv.jp/p.html?ringring/5/5/02084"></ringring-player>
-
+        <kropki-player src="http://pzv.jp/p.html?kropki/4/4/aa7fioco"></kropki-player>
     </div>
     <script type="module" src="./dev/main.ts">
     </script>
