ドッスンフワリ 追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -67,6 +67,7 @@
         <nagenawa-player src="http://pzv.jp/p.html?nagenawa/6/6/alrrlafbaaqu3011314g223h"></nagenawa-player>
         <ringring-player src="http://pzv.jp/p.html?ringring/5/5/02084"></ringring-player>
         <kropki-player src="http://pzv.jp/p.html?kropki/4/4/aa7fioco"></kropki-player>
+        <dosufuwa-player src="http://pzv.jp/p.html?dosufuwa/5/5/7pnsmrhf31d1"></dosufuwa-player>
     </div>
     <script type="module" src="./dev/main.ts">
     </script>
