たすくえあを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -68,6 +68,8 @@
         <ringring-player src="http://pzv.jp/p.html?ringring/5/5/02084"></ringring-player>
         <kropki-player src="http://pzv.jp/p.html?kropki/4/4/aa7fioco"></kropki-player>
         <dosufuwa-player src="http://pzv.jp/p.html?dosufuwa/5/5/7pnsmrhf31d1"></dosufuwa-player>
+        <tasquare-player src="http://pzv.jp/p.html?tasquare/6/6/1g.i4j1i3j5i5j.i2g1"></tasquare-player>
+
     </div>
     <script type="module" src="./dev/main.ts">
     </script>
