ファイブセルズ・フォーセルズ・なわばり追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -69,6 +69,9 @@
         <kropki-player src="http://pzv.jp/p.html?kropki/4/4/aa7fioco"></kropki-player>
         <dosufuwa-player src="http://pzv.jp/p.html?dosufuwa/5/5/7pnsmrhf31d1"></dosufuwa-player>
         <tasquare-player src="http://pzv.jp/p.html?tasquare/6/6/1g.i4j1i3j5i5j.i2g1"></tasquare-player>
+        <fivecells-player src="http://pzv.jp/p.html?fivecells/6/6/72b1i0f2b1i3a"></fivecells-player>
+        <fourcells-player src="http://pzv.jp/p.html?fourcells/6/6/b1d2a3e3d1f2b2a3b2"></fourcells-player>
+        <nawabari-player src="http://pzv.jp/p.html?nawabari/5/5/f0a1g2a1f"></nawabari-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
