黒どこ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -72,6 +72,7 @@
         <fivecells-player src="http://pzv.jp/p.html?fivecells/6/6/72b1i0f2b1i3a"></fivecells-player>
         <fourcells-player src="http://pzv.jp/p.html?fourcells/6/6/b1d2a3e3d1f2b2a3b2"></fourcells-player>
         <nawabari-player src="http://pzv.jp/p.html?nawabari/5/5/f0a1g2a1f"></nawabari-player>
+        <kurodoko-player src="http://pzv.jp/p.html?kurodoko/5/5/i7g5l2l2g4i"></kurodoko-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
