マイナリズム追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -73,6 +73,7 @@
         <fourcells-player src="http://pzv.jp/p.html?fourcells/6/6/b1d2a3e3d1f2b2a3b2"></fourcells-player>
         <nawabari-player src="http://pzv.jp/p.html?nawabari/5/5/f0a1g2a1f"></nawabari-player>
         <kurodoko-player src="http://pzv.jp/p.html?kurodoko/5/5/i7g5l2l2g4i"></kurodoko-player>
+        <minarism-player src="http://pzv.jp/p.html?minarism/4/4/hhhq21pgi"></minarism-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
