--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -74,6 +74,7 @@
         <nawabari-player src="http://pzv.jp/p.html?nawabari/5/5/f0a1g2a1f"></nawabari-player>
         <kurodoko-player src="http://pzv.jp/p.html?kurodoko/5/5/i7g5l2l2g4i"></kurodoko-player>
         <minarism-player src="http://pzv.jp/p.html?minarism/4/4/hhhq21pgi"></minarism-player>
+        <nagare-player src="http://pzv.jp/p.html?nagare/6/6/9e5c8f21g69b5e"></nagare-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
