--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -75,6 +75,9 @@
         <kurodoko-player src="http://pzv.jp/p.html?kurodoko/5/5/i7g5l2l2g4i"></kurodoko-player>
         <minarism-player src="http://pzv.jp/p.html?minarism/4/4/hhhq21pgi"></minarism-player>
         <nagare-player src="http://pzv.jp/p.html?nagare/6/6/9e5c8f21g69b5e"></nagare-player>
+        <mochikoro-player src="http://pzv.jp/p.html?mochikoro/5/5/4p2n1i1"></mochikoro-player>
+        <mochinyoro-player src="http://pzv.jp/p.html?mochinyoro/5/5/l4g2m2m1"></mochinyoro-player>
+        <nuribou-player src="http://pzv.jp/p.html?nuribou/5/5/1g2l1g4r7"></nuribou-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
