ウソワンを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -78,6 +78,7 @@
         <mochikoro-player src="http://pzv.jp/p.html?mochikoro/5/5/4p2n1i1"></mochikoro-player>
         <mochinyoro-player src="http://pzv.jp/p.html?mochinyoro/5/5/l4g2m2m1"></mochinyoro-player>
         <nuribou-player src="http://pzv.jp/p.html?nuribou/5/5/1g2l1g4r7"></nuribou-player>
+        <usoone-player src="http://pzv.jp/p.html?usoone/6/6/88aaaa03u0o0b75ecdk71cg76bg"></usoone-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
