--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -79,6 +79,7 @@
         <mochinyoro-player src="http://pzv.jp/p.html?mochinyoro/5/5/l4g2m2m1"></mochinyoro-player>
         <nuribou-player src="http://pzv.jp/p.html?nuribou/5/5/1g2l1g4r7"></nuribou-player>
         <usoone-player src="http://pzv.jp/p.html?usoone/6/6/88aaaa03u0o0b75ecdk71cg76bg"></usoone-player>
+        <yajikazu-player src="http://pzv.jp/p.html?yajikazu/6/6/40d23663i32h12b32a12a11c"></yajikazu-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
