--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -80,6 +80,7 @@
         <nuribou-player src="http://pzv.jp/p.html?nuribou/5/5/1g2l1g4r7"></nuribou-player>
         <usoone-player src="http://pzv.jp/p.html?usoone/6/6/88aaaa03u0o0b75ecdk71cg76bg"></usoone-player>
         <yajikazu-player src="http://pzv.jp/p.html?yajikazu/6/6/40d23663i32h12b32a12a11c"></yajikazu-player>
+        <bdblock-player src="http://pzv.jp/p.html?bdblock/5/5/100089082/12345o51g4i3i"></bdblock-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
