キンコンカンを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -81,6 +81,7 @@
         <usoone-player src="http://pzv.jp/p.html?usoone/6/6/88aaaa03u0o0b75ecdk71cg76bg"></usoone-player>
         <yajikazu-player src="http://pzv.jp/p.html?yajikazu/6/6/40d23663i32h12b32a12a11c"></yajikazu-player>
         <bdblock-player src="http://pzv.jp/p.html?bdblock/5/5/100089082/12345o51g4i3i"></bdblock-player>
+        <kinkonkan-player src="http://pzv.jp/p.html?kinkonkan/4/4/94gof0BAaDbBaCbCaAaD21122211"></kinkonkan-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
