よせなべ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -82,6 +82,7 @@
         <yajikazu-player src="http://pzv.jp/p.html?yajikazu/6/6/40d23663i32h12b32a12a11c"></yajikazu-player>
         <bdblock-player src="http://pzv.jp/p.html?bdblock/5/5/100089082/12345o51g4i3i"></bdblock-player>
         <kinkonkan-player src="http://pzv.jp/p.html?kinkonkan/4/4/94gof0BAaDbBaCbCaAaD21122211"></kinkonkan-player>
+        <yosenabe-player src="http://pzv.jp/p.html?yosenabe/5/5/d1hgm1i3j2i5k5ki2o1l2k3"></yosenabe-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
