--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -83,6 +83,7 @@
         <bdblock-player src="http://pzv.jp/p.html?bdblock/5/5/100089082/12345o51g4i3i"></bdblock-player>
         <kinkonkan-player src="http://pzv.jp/p.html?kinkonkan/4/4/94gof0BAaDbBaCbCaAaD21122211"></kinkonkan-player>
         <yosenabe-player src="http://pzv.jp/p.html?yosenabe/5/5/d1hgm1i3j2i5k5ki2o1l2k3"></yosenabe-player>
+        <bag-player src="http://pzv.jp/p.html?bag/6/6/g3q2h3jbj3i3i2g"></bag-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
