--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -85,6 +85,7 @@
         <yosenabe-player src="http://pzv.jp/p.html?yosenabe/5/5/d1hgm1i3j2i5k5ki2o1l2k3"></yosenabe-player>
         <bag-player src="http://pzv.jp/p.html?bag/6/6/g3q2h3jbj3i3i2g"></bag-player>
         <factors-player src="http://pzv.jp/p.html?factors/5/5/rvvcm9jf54653-28ca2833-14"></factors-player>
+        <goishi-player src="http://pzv.jp/p.html?goishi/6/7/vsten1tvo"></goishi-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
