マカロ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -86,6 +86,7 @@
         <bag-player src="http://pzv.jp/p.html?bag/6/6/g3q2h3jbj3i3i2g"></bag-player>
         <factors-player src="http://pzv.jp/p.html?factors/5/5/rvvcm9jf54653-28ca2833-14"></factors-player>
         <goishi-player src="http://pzv.jp/p.html?goishi/6/7/vsten1tvo"></goishi-player>
+        <makaro-player src="http://pzv.jp/p.html?makaro/5/5/lfflu7qdemei2icmb"></makaro-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
