--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -87,6 +87,7 @@
         <factors-player src="http://pzv.jp/p.html?factors/5/5/rvvcm9jf54653-28ca2833-14"></factors-player>
         <goishi-player src="http://pzv.jp/p.html?goishi/6/7/vsten1tvo"></goishi-player>
         <makaro-player src="http://pzv.jp/p.html?makaro/5/5/lfflu7qdemei2icmb"></makaro-player>
+        <juosan-player src="http://pzv.jp/p.html?juosan/5/5/8mdnvues132g213g22g"></juosan-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
