タテボーヨコボーを追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -88,6 +88,7 @@
         <goishi-player src="http://pzv.jp/p.html?goishi/6/7/vsten1tvo"></goishi-player>
         <makaro-player src="http://pzv.jp/p.html?makaro/5/5/lfflu7qdemei2icmb"></makaro-player>
         <juosan-player src="http://pzv.jp/p.html?juosan/5/5/8mdnvues132g213g22g"></juosan-player>
+        <tateyoko-player src="http://pzv.jp/p.html?tateyoko/5/5/i23i3ono2i25i22pnqi33i2"></tateyoko-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
