--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -91,6 +91,7 @@
         <tateyoko-player src="http://pzv.jp/p.html?tateyoko/5/5/i23i3ono2i25i22pnqi33i2"></tateyoko-player>
         <tatamibari-player src="http://pzv.jp/p.html?tatamibari/5/5/m3g11i2g31h13g3g"></tatamibari-player>
         <box-player src="http://pzv.jp/p.html?box/5/5/7a9979672f"></box-player>
+        <building-player src="http://pzv.jp/p.html?building/4/4/k13h4j3g"></building-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
