--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -92,6 +92,7 @@
         <tatamibari-player src="http://pzv.jp/p.html?tatamibari/5/5/m3g11i2g31h13g3g"></tatamibari-player>
         <box-player src="http://pzv.jp/p.html?box/5/5/7a9979672f"></box-player>
         <building-player src="http://pzv.jp/p.html?building/4/4/k13h4j3g"></building-player>
+        <easyasabc-player src="http://pzv.jp/p.html?easyasabc/4/4/3/1m2h3g3h"></easyasabc-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
