まさし追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -93,6 +93,7 @@
         <box-player src="http://pzv.jp/p.html?box/5/5/7a9979672f"></box-player>
         <building-player src="http://pzv.jp/p.html?building/4/4/k13h4j3g"></building-player>
         <easyasabc-player src="http://pzv.jp/p.html?easyasabc/4/4/3/1m2h3g3h"></easyasabc-player>
+        <hakoiri-player src="http://pzv.jp/p.html?hakoiri/5/5/4qb44qb41c3c1f23a2b1b1"></hakoiri-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
