数コロ・数コロ部屋追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -97,6 +97,8 @@
         <arukone-player src="http://pzv.jp/p.html?arukone/5/5/1m2h3g3h1m2"></arukone-player>
         <walllogic-player src="http://pzv.jp/p.html?walllogic/5/5/h1k2g2i5g5k4h"></walllogic-player>
         <view-player src="http://pzv.jp/p.html?view/5/5/m401g3g2g101m"></view-player>
+        <sukoro-player src="http://pzv.jp/p.html?sukoro/5/5/2a2c4a2g2a4c2a2"></sukoro-player>
+        <sukororoom-player src="http://pzv.jp/p.html?sukororoom/5/5/4vjbtnfpb3i2i3"></sukororoom-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
