パズル名などを調整

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -13,14 +13,14 @@
         <input id="filter-text" type="text" placeholder="filter" autocomplete="off">
     </div>
     <div class="container">
-        <slitherlink-player src="http://pzv.jp/p.html?slither/5/5/cbcbcddad"></slitherlink-player>
+        <slither-player src="http://pzv.jp/p.html?slither/5/5/cbcbcddad"></slither-player>
         <mashu-player src="http://pzv.jp/p.html?mashu/6/6/1063000i3000"></mashu-player>
         <sudoku-player src="http://pzv.jp/p.html?sudoku/4/4/g1k23k3g"></sudoku-player>
         <kakkuro-player src="http://pzv.jp/p.html?kakuro/5/5/48la0.na0lh3l0Bn.0cl.c4a3"></kakkuro-player>
-        <numberlink-player src="https://puzz.link/p?numlin/5/5/1j2h3m1h2j3"></numberlink-player>
+        <numlin-player src="https://puzz.link/p?numlin/5/5/1j2h3m1h2j3"></numlin-player>
         <nurikabe-player src="http://pzv.jp/p.html?nurikabe/5/5/g5k2o1k3g"></nurikabe-player>
         <fillomino-player src="https://puzz.link/p?fillomino/6/6/h4j53g2k5233k2g14j3h"></fillomino-player>
-        <hitokure-player src="http://pzv.jp/p.html?hitori/4/4/1114142333214213"></hitokure-player>
+        <hitori-player src="http://pzv.jp/p.html?hitori/4/4/1114142333214213"></hitori-player>
         <shakashaka-player src="http://pzv.jp/p.html?shakashaka/6/6/cgbhdhegdrb"></shakashaka-player>
         <shikaku-player src="http://pzv.jp/p.html?shikaku/6/6/j3g56h6t6h23g5j"></shikaku-player>
         <heyawake-player src="http://pzv.jp/p.html?heyawake/6/6/lll155007rs12222j"></heyawake-player>
