ごきげんななめ、輪切を追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -99,6 +99,8 @@
         <view-player src="http://pzv.jp/p.html?view/5/5/m401g3g2g101m"></view-player>
         <sukoro-player src="http://pzv.jp/p.html?sukoro/5/5/2a2c4a2g2a4c2a2"></sukoro-player>
         <sukororoom-player src="http://pzv.jp/p.html?sukororoom/5/5/4vjbtnfpb3i2i3"></sukororoom-player>
+        <gokigen-player src="http://pzv.jp/p.html?gokigen/4/4/iaegcgcj6a"></gokigen-player>
+        <wagiri-player src="http://pzv.jp/p.html?wagiri/4/4/lebcacja1d2b1d1a"></wagiri-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
