--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -101,6 +101,7 @@
         <sukororoom-player src="http://pzv.jp/p.html?sukororoom/5/5/4vjbtnfpb3i2i3"></sukororoom-player>
         <gokigen-player src="http://pzv.jp/p.html?gokigen/4/4/iaegcgcj6a"></gokigen-player>
         <wagiri-player src="http://pzv.jp/p.html?wagiri/4/4/lebcacja1d2b1d1a"></wagiri-player>
+        <wblink-player src="http://pzv.jp/p.html?wblink/5/5/ci6a2ln1i"></wblink-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
