--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -103,6 +103,7 @@
         <wagiri-player src="http://pzv.jp/p.html?wagiri/4/4/lebcacja1d2b1d1a"></wagiri-player>
         <wblink-player src="http://pzv.jp/p.html?wblink/5/5/ci6a2ln1i"></wblink-player>
         <roma-player src="http://pzv.jp/p.html?roma/4/4/augddgb2a12d53a3b"></roma-player>
+        <loute-player src="http://pzv.jp/p.html?loute/5/5/5i3h1h1i1h2h4i5"></loute-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
