はなれ組追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -104,6 +104,7 @@
         <wblink-player src="http://pzv.jp/p.html?wblink/5/5/ci6a2ln1i"></wblink-player>
         <roma-player src="http://pzv.jp/p.html?roma/4/4/augddgb2a12d53a3b"></roma-player>
         <loute-player src="http://pzv.jp/p.html?loute/5/5/5i3h1h1i1h2h4i5"></loute-player>
+        <hanare-player src="http://pzv.jp/p.html?hanare/4/4/jegf6gu3"></hanare-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
