--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -106,6 +106,7 @@
         <loute-player src="http://pzv.jp/p.html?loute/5/5/5i3h1h1i1h2h4i5"></loute-player>
         <hanare-player src="http://pzv.jp/p.html?hanare/4/4/jegf6gu3"></hanare-player>
         <nondango-player src="http://pzv.jp/p.html?nondango/6/6/5jlp72e15tpq2i3ikht0"></nondango-player>
+        <cbblock-player src="http://pzv.jp/p.html?cbblock/4/4/ah0oa"></cbblock-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
