ナンロー追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -108,6 +108,7 @@
         <nondango-player src="http://pzv.jp/p.html?nondango/6/6/5jlp72e15tpq2i3ikht0"></nondango-player>
         <cbblock-player src="http://pzv.jp/p.html?cbblock/4/4/ah0oa"></cbblock-player>
         <amibo-player src="http://pzv.jp/p.html?amibo/5/5/2c4a.c3f.3f"></amibo-player>
+        <nanro-player src="http://pzv.jp/p.html?nanro/4/4/6r0s1oi13n1h"></nanro-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
