--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -109,6 +109,7 @@
         <cbblock-player src="http://pzv.jp/p.html?cbblock/4/4/ah0oa"></cbblock-player>
         <amibo-player src="http://pzv.jp/p.html?amibo/5/5/2c4a.c3f.3f"></amibo-player>
         <nanro-player src="http://pzv.jp/p.html?nanro/4/4/6r0s1oi13n1h"></nanro-player>
+        <rectslider-player src="http://pzv.jp/p.html?rectslider/6/6/2h2.4.t.j.g1g3g3i"></rectslider-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
