へやぼん追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -111,6 +111,7 @@
         <nanro-player src="http://pzv.jp/p.html?nanro/4/4/6r0s1oi13n1h"></nanro-player>
         <rectslider-player src="http://pzv.jp/p.html?rectslider/6/6/2h2.4.t.j.g1g3g3i"></rectslider-player>
         <sato-player src="http://pzv.jp/p.html?sato/5/5/26c8ueef3.l2i2m2j"></sato-player>
+        <heyabon-player src="http://pzv.jp/p.html?heyabon/5/5/co360rr0g1h0g.j121g3h1h.g.g"></heyabon-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
