--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -112,6 +112,7 @@
         <rectslider-player src="http://pzv.jp/p.html?rectslider/6/6/2h2.4.t.j.g1g3g3i"></rectslider-player>
         <sato-player src="http://pzv.jp/p.html?sato/5/5/26c8ueef3.l2i2m2j"></sato-player>
         <heyabon-player src="http://pzv.jp/p.html?heyabon/5/5/co360rr0g1h0g.j121g3h1h.g.g"></heyabon-player>
+        <bonsan-player src="http://pzv.jp/p.html?bonsan/c/5/5/i.h.i2i.i3h2i"></bonsan-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
