--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -113,6 +113,7 @@
         <sato-player src="http://pzv.jp/p.html?sato/5/5/26c8ueef3.l2i2m2j"></sato-player>
         <heyabon-player src="http://pzv.jp/p.html?heyabon/5/5/co360rr0g1h0g.j121g3h1h.g.g"></heyabon-player>
         <bonsan-player src="http://pzv.jp/p.html?bonsan/c/5/5/i.h.i2i.i3h2i"></bonsan-player>
+        <bosanowa-player src="http://pzv.jp/p.html?bonsan/6/5/jo9037g2n2n3g4j3i"></bosanowa-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
