--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -114,6 +114,7 @@
         <heyabon-player src="http://pzv.jp/p.html?heyabon/5/5/co360rr0g1h0g.j121g3h1h.g.g"></heyabon-player>
         <bonsan-player src="http://pzv.jp/p.html?bonsan/c/5/5/i.h.i2i.i3h2i"></bonsan-player>
         <bosanowa-player src="http://pzv.jp/p.html?bonsan/6/5/jo9037g2n2n3g4j3i"></bosanowa-player>
+        <lookair-player src="http://pzv.jp/p.html?lookair/6/6/3e3b3g1a2e0a2c1d"></lookair-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
