--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -115,6 +115,7 @@
         <bonsan-player src="http://pzv.jp/p.html?bonsan/c/5/5/i.h.i2i.i3h2i"></bonsan-player>
         <bosanowa-player src="http://pzv.jp/p.html?bonsan/6/5/jo9037g2n2n3g4j3i"></bosanowa-player>
         <lookair-player src="http://pzv.jp/p.html?lookair/6/6/3e3b3g1a2e0a2c1d"></lookair-player>
+        <kakuru-player src="http://pzv.jp/p.html?kakuru/5/5/3.a+4+mD.S.bm+g+A.3"></kakuru-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
