--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -117,6 +117,7 @@
         <lookair-player src="http://pzv.jp/p.html?lookair/6/6/3e3b3g1a2e0a2c1d"></lookair-player>
         <kakuru-player src="http://pzv.jp/p.html?kakuru/5/5/3.a+4+mD.S.bm+g+A.3"></kakuru-player>
         <triplace-player src="http://pzv.jp/p.html?triplace/5/5/%2m_m%1m_.0.1....11"></triplace-player>
+        <yajitatami-player src="http://pzv.jp/p.html?yajitatami/5/5/b3233a2222p1233"></yajitatami-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
