パイプリンク・帰ってきたパイプリンク追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -119,6 +119,8 @@
         <triplace-player src="http://pzv.jp/p.html?triplace/5/5/%2m_m%1m_.0.1....11"></triplace-player>
         <yajitatami-player src="http://pzv.jp/p.html?yajitatami/5/5/b3233a2222p1233"></yajitatami-player>
         <loopsp-player src="http://pzv.jp/p.html?loopsp/5/5/sgnmn1n1n2njnls"></loopsp-player>
+        <pipelink-player src="http://pzv.jp/p.html?pipelink/5/5/mamejan"></pipelink-player>
+        <pipelinkr-player src="http://pzv.jp/p.html?pipelinkr/5/5/ma0j2j0fm"></pipelinkr-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
