メジリンク追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -121,6 +121,7 @@
         <loopsp-player src="http://pzv.jp/p.html?loopsp/5/5/sgnmn1n1n2njnls"></loopsp-player>
         <pipelink-player src="http://pzv.jp/p.html?pipelink/5/5/mamejan"></pipelink-player>
         <pipelinkr-player src="http://pzv.jp/p.html?pipelinkr/5/5/ma0j2j0fm"></pipelinkr-player>
+        <mejilink-player src="http://pzv.jp/p.html?mejilink/4/4/g9rm4"></mejilink-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
