クサビリンク追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -122,6 +122,7 @@
         <pipelink-player src="http://pzv.jp/p.html?pipelink/5/5/mamejan"></pipelink-player>
         <pipelinkr-player src="http://pzv.jp/p.html?pipelinkr/5/5/ma0j2j0fm"></pipelinkr-player>
         <mejilink-player src="http://pzv.jp/p.html?mejilink/4/4/g9rm4"></mejilink-player>
+        <kusabi-player src="http://pzv.jp/p.html?kusabi/5/5/311e2c12c1f3"></kusabi-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
