--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -123,6 +123,7 @@
         <pipelinkr-player src="http://pzv.jp/p.html?pipelinkr/5/5/ma0j2j0fm"></pipelinkr-player>
         <mejilink-player src="http://pzv.jp/p.html?mejilink/4/4/g9rm4"></mejilink-player>
         <kusabi-player src="http://pzv.jp/p.html?kusabi/5/5/311e2c12c1f3"></kusabi-player>
+        <kurochute-player src="http://pzv.jp/p.html?kurochute/5/5/132k1i1i2k332"></kurochute-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
