連番窓口 追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -124,6 +124,7 @@
         <mejilink-player src="http://pzv.jp/p.html?mejilink/4/4/g9rm4"></mejilink-player>
         <kusabi-player src="http://pzv.jp/p.html?kusabi/5/5/311e2c12c1f3"></kusabi-player>
         <kurochute-player src="http://pzv.jp/p.html?kurochute/5/5/132k1i1i2k332"></kurochute-player>
+        <renban-player src="http://pzv.jp/p.html?renban/4/4/vmok3g1p5g2h"></renban-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
