--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -125,6 +125,7 @@
         <kusabi-player src="http://pzv.jp/p.html?kusabi/5/5/311e2c12c1f3"></kusabi-player>
         <kurochute-player src="http://pzv.jp/p.html?kurochute/5/5/132k1i1i2k332"></kurochute-player>
         <renban-player src="http://pzv.jp/p.html?renban/4/4/vmok3g1p5g2h"></renban-player>
+        <paintarea-player src="http://pzv.jp/p.html?paintarea/5/5/pmvmfuejf4k1f"></paintarea-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
