--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -126,6 +126,7 @@
         <kurochute-player src="http://pzv.jp/p.html?kurochute/5/5/132k1i1i2k332"></kurochute-player>
         <renban-player src="http://pzv.jp/p.html?renban/4/4/vmok3g1p5g2h"></renban-player>
         <paintarea-player src="http://pzv.jp/p.html?paintarea/5/5/pmvmfuejf4k1f"></paintarea-player>
+        <kazunori-player src="http://pzv.jp/p.html?kazunori/4/4/94g1s0g4k2p2k"></kazunori-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
