ヤギとオオカミ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -127,6 +127,7 @@
         <renban-player src="http://pzv.jp/p.html?renban/4/4/vmok3g1p5g2h"></renban-player>
         <paintarea-player src="http://pzv.jp/p.html?paintarea/5/5/pmvmfuejf4k1f"></paintarea-player>
         <kazunori-player src="http://pzv.jp/p.html?kazunori/4/4/94g1s0g4k2p2k"></kazunori-player>
+        <shwolf-player src="http://pzv.jp/p.html?shwolf/5/5/0282bocb6ajf9"></shwolf-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
