快刀乱麻、新快刀乱麻追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -128,6 +128,8 @@
         <paintarea-player src="http://pzv.jp/p.html?paintarea/5/5/pmvmfuejf4k1f"></paintarea-player>
         <kazunori-player src="http://pzv.jp/p.html?kazunori/4/4/94g1s0g4k2p2k"></kazunori-player>
         <shwolf-player src="http://pzv.jp/p.html?shwolf/5/5/0282bocb6ajf9"></shwolf-player>
+        <kramman-player src="http://pzv.jp/p.html?kramman/5/5/32223i3f2fb99i"></kramman-player>
+        <kramma-player src="http://pzv.jp/p.html?kramma/c/5/5/9ock3ba9i"></kramma-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
