--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -130,6 +130,7 @@
         <shwolf-player src="http://pzv.jp/p.html?shwolf/5/5/0282bocb6ajf9"></shwolf-player>
         <kramman-player src="http://pzv.jp/p.html?kramman/5/5/32223i3f2fb99i"></kramman-player>
         <kramma-player src="http://pzv.jp/p.html?kramma/c/5/5/9ock3ba9i"></kramma-player>
+        <cojun-player src="http://pzv.jp/p.html?cojun/c/4/4/pd0hsoh3p3h"></cojun-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
